--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   google_fonts: ^6.1.0
   iconify_flutter: ^0.0.5
   font_awesome_flutter: ^10.7.0
+  http: ^1.2.0
+  intl: ^0.19.0
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
