--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,12 @@ dependencies:
   intl: ^0.19.0
   geolocator: ^11.0.0
   geocoding: ^2.2.0
+  firebase_core: ^2.25.5
+  cloud_firestore: ^4.15.6
+  go_router: ^13.0.1
+  firebase_auth: ^4.17.7
+  provider: ^6.1.2
+  firebase_storage: ^11.6.8
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +67,8 @@ flutter:
     - assets/images/quran.png
     - assets/images/kalender.png
     - assets/images/progress.png
-    - assets/images/quran-nav.svg
+    - assets/images/quran-nav.png
+    - assets/images/auth.png
   fonts:
     - family: Poppins
       fonts:
