--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_auth: ^4.17.7
   provider: ^6.1.2
   firebase_storage: ^11.6.8
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
