--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   iconify_flutter: ^0.0.5
   font_awesome_flutter: ^10.7.0
   http: ^1.2.0
-  intl: ^0.19.0
+  intl: 0.18.1
   geolocator: ^11.0.0
   geocoding: ^2.2.0
   firebase_core: ^2.25.5
@@ -34,6 +34,9 @@ dependencies:
   flutter_local_notifications: ^17.0.0
   shared_preferences: ^2.2.2
   firebase_messaging: ^14.7.20
+  device_preview: ^1.1.0
+  flutter_screenutil: ^5.9.0
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
