--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   device_preview: ^1.1.0
   flutter_screenutil: ^5.9.0
   rxdart: ^0.27.7
+  image: ^4.1.7
+  flutter_timezone: ^1.0.8
+  device_info_plus: ^9.1.2
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +69,7 @@ flutter:
     - assets/images/done.png
     - assets/images/not-yet.png
     - assets/images/tasbih.png
+    - assets/images/tasbih.gif
     - assets/images/next.png
     - assets/images/back.png
     - assets/images/edit.png
