--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,6 +67,9 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 flutter {
