--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image: ^4.1.7
   flutter_timezone: ^1.0.8
   device_info_plus: ^9.1.2
+  home_widget: ^0.4.1
 
 dev_dependencies:
   flutter_test:
